# delete_ec2

./: .gitignore  Cargo.toml  flake.nix  readme.md
src/: main.rs
